# mai_university

./: .gitignore  .gitmodules  README.md
1 course/course work/cw1/: sakost_cw1.odt
1 course/course work/cw2/: sakost_cw2.odt
1 course/course work/cw3/: sakost_cw3.odt
1 course/course work/cw4/: c4.out  sakost_cw4.odt
1 course/course work/cw6/: main.c  sakost_cw6.odt  test.txt  test2.txt  test3.txt
1 course/course work/cw7/: cw7.docx
1 course/course work/cw8/: cw8.odt
1 course/course work/cw9/: cw9.odt
1 course/diskr/SGW/: 1.tex  2.tex  3.tex  4.tex  5.tex
1 course/diskr/cw/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex  7.tex  main.tex
1 course/essay/: aaron.pptx  esssay-dd.odt  obrazec_referata.docx  Образец_титульного_для_реферата.doc  Утилита dd.pptx  реферат. Аарон Шварц.odt
1 course/labs/: Chisty_blank_laby.odt
1 course/labs/1-2/: lab1-2_22.odt  lab1-2_Gzhegosh.odt
1 course/labs/10/: a.out  lab10_22.odt  main.cpp
1 course/labs/11-12/: lab11_12.c  lab11_22.c  lab11_22.odt  lab11_25.c  lab11_42.c  lab11_9.c  lab12_22.c  lab12_22.odt  lab12_7.c
1 course/labs/13/: lab13_12.c  lab13_15.c  lab13_16.c  lab13_22.c  lab13_22.odt  lab13_25.c  lab13_5.c
1 course/labs/14/: lab14_12.c  lab14_17.c  lab14_22.c  lab14_22.odt  lab14_27.c
1 course/labs/15/: lab15_12.c  lab15_22.c  lab15_22.odt  lab15_25.c  lab15_4.c  lab15_5.c
1 course/labs/20/: lab20_22.odt
1 course/labs/21/: lab21.sh  lab21_22.odt
1 course/labs/22/: lab22_22.odt  main.tex
1 course/labs/23/: lab23_22.odt
1 course/labs/24/: lab24_22.odt
1 course/labs/25-26/: Makefile  lab.c  lab.h  lab25-26_22.odt  main.c
2 course/diskran/: codestyle_clion.xml
2 course/diskran/lab2/: CMakeLists.txt  DA_report_3_208_Sazhenov.odt  check_map.cpp  in.txt  main.cpp  patricia.h
2 course/diskran/lab2/solution/: Makefile  main.cpp
2 course/diskran/lab5/: CMakeLists.txt  benchmark.cpp  input.txt  naive.cpp  naive.h  suffixtree.cpp  test.py  test_gen.py
2 course/diskran/lab5/solution/: Makefile  main.cpp  suffixtree.h
2 course/diskran/lab8/: CMakeLists.txt  main.cpp
2 course/diskran/lab9/: CMakeLists.txt  benchmark.cpp  floyd_warshall.cpp  floyd_warshall.h  graph.cpp  graph.h  johnson.h
2 course/diskran/lab9/solution/: Makefile  johnson.cpp  johnson.h  main.cpp
2 course/english/: synopsis.odt
2 course/logprog/: exam.pl  sec.pl
2 course/os/: template.odt
2 course/os/6-8 lab/: CMakeLists.txt  calc_node.cpp  definitions.h  lab.proto  logger.hpp  main.cpp  node.cpp  os_lab6-8_report.odt
(+104 files in other folders)
