cmake_minimum_required(VERSION 3.16)
project(lab2)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g")

#add_definitions(-DONPC)
#add_definitions(-DTIMEIT)
set(CMAKE_IGNORE_PATH ${CMAKE_IGNORE_PATH}:/usr/include)

add_executable(lab2 main.cpp patricia.h)
add_executable(timeit check_map.cpp)